// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swagger - nested controllers > OpenSpec3 > should swagger spec 1`] = `
{
  "info": {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": {
    "/rest/domain/{contextID}": {
      "get": {
        "operationId": "domainControllerGet",
        "parameters": [
          {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "DomainController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments": {
      "get": {
        "operationId": "commentControllerGet",
        "parameters": [
          {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "CommentController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments/flag": {
      "get": {
        "operationId": "flaggedCommentControllerList",
        "parameters": [
          {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments/{commentID}/flag": {
      "post": {
        "operationId": "flaggedCommentControllerCreate",
        "parameters": [
          {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "path",
            "name": "commentID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/platform/{platform}": {
      "get": {
        "operationId": "platformControllerGet",
        "parameters": [
          {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "PlatformController",
        ],
      },
    },
    "/rest/platform/{platform}/comments": {
      "get": {
        "operationId": "commentControllerGetByPlatform",
        "parameters": [
          {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "CommentController",
        ],
      },
    },
    "/rest/platform/{platform}/comments/flag": {
      "get": {
        "operationId": "flaggedCommentControllerListByPlatform",
        "parameters": [
          {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/platform/{platform}/comments/{commentID}/flag": {
      "post": {
        "operationId": "flaggedCommentControllerCreateByPlatformCommentId",
        "parameters": [
          {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "in": "path",
            "name": "commentID",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "description": "Success",
          },
        },
        "tags": [
          "FlaggedCommentController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "DomainController",
    },
    {
      "name": "CommentController",
    },
    {
      "name": "FlaggedCommentController",
    },
    {
      "name": "PlatformController",
    },
  ],
}
`;

exports[`Swagger - nested controllers OpenSpec3 should swagger spec 1`] = `
Object {
  "info": Object {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/rest/domain/{contextID}": Object {
      "get": Object {
        "operationId": "domainControllerGet",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "DomainController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments": Object {
      "get": Object {
        "operationId": "commentControllerGet",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "CommentController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments/flag": Object {
      "get": Object {
        "operationId": "flaggedCommentControllerList",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/domain/{contextID}/comments/{commentID}/flag": Object {
      "post": Object {
        "operationId": "flaggedCommentControllerCreate",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "contextID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
          Object {
            "in": "path",
            "name": "commentID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/platform/{platform}": Object {
      "get": Object {
        "operationId": "platformControllerGet",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "PlatformController",
        ],
      },
    },
    "/rest/platform/{platform}/comments": Object {
      "get": Object {
        "operationId": "commentControllerGetByPlatform",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "CommentController",
        ],
      },
    },
    "/rest/platform/{platform}/comments/flag": Object {
      "get": Object {
        "operationId": "flaggedCommentControllerListByPlatform",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "FlaggedCommentController",
        ],
      },
    },
    "/rest/platform/{platform}/comments/{commentID}/flag": Object {
      "post": Object {
        "operationId": "flaggedCommentControllerCreateByPlatformCommentId",
        "parameters": Array [
          Object {
            "in": "path",
            "name": "platform",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
          Object {
            "in": "path",
            "name": "commentID",
            "required": true,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "FlaggedCommentController",
        ],
      },
    },
  },
  "tags": Array [
    Object {
      "name": "DomainController",
    },
    Object {
      "name": "CommentController",
    },
    Object {
      "name": "FlaggedCommentController",
    },
    Object {
      "name": "PlatformController",
    },
  ],
}
`;
